<resources>
    <string name="app_name">MSN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_wordl">Hello World!</string>
    <string name="main_lbl_title">PLEASE INSERT YOUR DATA</string>
    <string name="main_txt_name">Name</string>
    <string name="main_btn_accept">Accept</string>
    <string name="login_user_name">User name</string>
    <string name="login_btn_login">Login</string>
    <string name="login_dont_have_account">¿Dont have account?,</string>
    <string name="login_create_account_here">Create here!</string>
    <string name="login_user_password">Password</string>
    <string name="create_account_email">Email</string>
    <string name="login_user_confirm_password">Confirm password</string>
    <string name="create_account_btn_join_on">Join on!</string>
    <string name="login_user_login">User login</string>
    <string name="my_toolbar_title_create_account">Create Account</string>
    <string name="txt_time_card">4 dias</string>
    <string name="txt_num_like">10 likes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_option_home">Home</string>
    <string name="menu_option_profile">Profile</string>
    <string name="menu_option_search">Search</string>
    <string name="txt_title_image">\"Party in the beach\"</string>
    <string name="txt_content_image">\"Si quieres construir un barco, no empieces por buscar madera, cortar tablas o distribuir el trabajo. Evoca primero en los hombres y mujeres el anhelo del mar libre y ancho\". <bold>Antoine de Saint-Exupéry.</bold></string>
    <string name="transition_name">transitionnamepicture</string>

</resources>
