<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <TextView
        android:id="@+id/main_lbl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lbl_title"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/main_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_txt_name"
        />

    <Button
        android:id="@+id/main_btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_accept"
        android:onClick="setName"
        />

</LinearLayout>