<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".views.CreateAccountActivity"
    >

    <include layout="@layout/actionbar_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_account_email"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/margin_20dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/margin_20dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_login"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/margin_20dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_password"
                    android:theme="@style/EditTextBlack"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_confirm_password"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_20dp"
                android:inputType="textPassword"
                />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_join_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_btn_join_on"
                android:theme="@style/raised_buttonDark"
                android:layout_marginTop="40dp"
                />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>