<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.ImageDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_tollbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            android:fitsSystemWindows="true"
            >
        <ImageView
            android:id="@+id/img_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/beach_nadir"
            app:layout_collapseMode="parallax"
            android:transitionName="@string/transition_name"
            />


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin"/>



        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_5dp"
            >
            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_user_name"

                android:textSize="@dimen/txtsize_25sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_user_name"
                    android:textSize="@dimen/txtsize_15sp"
                    />

                <TextView
                    android:id="@+id/time_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_time_card"
                    android:textSize="@dimen/txtsize_15sp"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/title_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_image"
                android:textSize="@dimen/txtsize_15sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/margin_20dp"
                />

            <TextView
                android:id="@+id/txt_content_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_content_image"
                android:textSize="@dimen/txtsize_15sp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingLeft="@dimen/margin_20dp"
                android:paddingRight="@dimen/margin_20dp"
                />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_search"
        />
</android.support.design.widget.CoordinatorLayout>