<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/simpleCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height_200dp"
    cardview:cardCornerRadius="@dimen/corner_radius_4dp"
    android:layout_marginBottom="@dimen/margin_5dp"
    >
    <android.support.v7.widget.ContentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height_200dp"
            android:background="@drawable/beach_nadir"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingBottom="@dimen/margin_10dp"
            android:background="@color/colorBackCard">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_user_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtsize_25sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/first_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_user_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtsize_15sp"
                    />
                <TextView
                    android:id="@+id/time_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_time_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtsize_15sp"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10dp">

                <CheckBox
                    android:id="@+id/check_like"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:button="@drawable/checkbox_selector" />
                <TextView
                    android:id="@+id/num_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_num_like"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txtsize_15sp"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.ContentFrameLayout>

</android.support.v7.widget.CardView>